--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,3 @@
-certifi==2019.9.11
 dash==1.0.0
 gunicorn==19.9.0
 dash-core-components==1.0.0
@@ -11,7 +10,8 @@ Flask-Compress==1.4.0
 numpy==1.17.2
 pandas==0.23.4
 pandas-datareader==0.8.1
+plotly==4.2.1
+plotly-express==0.4.1
 yahoofinancials==1.5
 yahoo-finance==1.4.0          
 yfinance==0.1.50
-
